base/frontend-deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata: {name: frontend}
spec:
  selector: {matchLabels: {app: frontend}}
  template:
    metadata: {labels: {app: frontend}}
    spec:
      containers:
      - name: frontend
        image: ghcr.io/zhangtao1994hk/argocd-apps/frontend:latest
        #image: frontend-image 
        command: ["opentelemetry-instrument"]
        args: ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
        resources:
          requests:
            cpu: "100m"      # 基准需求：0.1个CPU核（HPA算百分比的分母）
            memory: "128Mi"  # 基础内存需求
          limits:
            cpu: "500m"      # 最大限制：0.5个CPU核（防止一个Pod把整台机器跑死）
            memory: "256Mi"  # 最大内存限制
        ports: [{containerPort: 5000}]
        livenessProbe:  # 存活检查，失败会重启容器
          httpGet: {path: /health, port: 5000}
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe: # 就绪检查，失败后 Service 会剔除该 Pod
          httpGet: {path: /health, port: 5000}
          initialDelaySeconds: 2
