base/backend-deploy.yaml
apiVersion: v1
kind: Service
metadata: {name: backend-service}
spec:
  selector: {app: backend}
  ports: [{port: 5000}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: backend}
spec:
  selector: {matchLabels: {app: backend}}
  replicas: 4
  template:
    metadata: {labels: {app: backend}}
    spec:
      containers:
      - name: backend
        #image: ghcr.io/zhangtao1994hk/argocd-apps/backend:f6351ee87e03564386d2b20034f1eadf203eeee9
        image: ghcr.io/zhangtao1994hk/argocd-apps/backend:latest
        command: ["opentelemetry-instrument"]
        args: ["python", "app.py"]
        resources:
          requests:
            cpu: "100m"      # 基准需求：0.1个CPU核（HPA算百分比的分母）
            memory: "128Mi"  # 基础内存需求
          limits:
            cpu: "500m"      # 最大限制：0.5个CPU核（防止一个Pod把整台机器跑死）
            memory: "256Mi"  # 最大内存限制
        ports: [{containerPort: 5000}]
        livenessProbe:  # 存活检查，失败会重启容器
          httpGet: {path: /health, port: 5000}
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe: # 就绪检查，失败后 Service 会剔除该 Pod
          httpGet: {path: /health, port: 5000}
          initialDelaySeconds: 2
